# unified-memory-framework

./: .cmake-format  .gitignore  .mailmap  .trivyignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ChangeLog  DartConfiguration.tcl  LICENSE.TXT  Makefile  README  README.md  RELEASE_STEPS.md  bench.sh  cmake_install.cmake  cmake_uninstall.cmake  data.json  data_archive.json  vcpkg.json
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  benchmark_interfaces.hpp  benchmark_size.hpp  benchmark_umf.hpp  multithread.cpp  multithread.hpp  ubench.c  ubench.h
examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
examples/advanced/: disjoint_level_zero.c
examples/basic/: CMakeLists.txt  basic.c  find_umf.cmake  include.cmake  ipc_ipcapi.sh  ipc_ipcapi_anon_fd.sh  ipc_ipcapi_consumer.c  ipc_level_zero.c  ipc_shm_ipcapi.sh  ipc_shm_ipcapi_producer.c  utils_level_zero.h
examples/cmake/: FindCUDA.cmake  FindJEMALLOC.cmake  FindLIBHWLOC.cmake  FindLIBNUMA.cmake  FindLIBUMF.cmake  FindTBB.cmake  FindZE_LOADER.cmake
examples/common/: examples_level_zero.c  examples_level_zero_helpers.c  examples_level_zero_helpers.h  examples_utils.h  utils_examples.h  utils_level_zero.h
examples/ctl/: CMakeLists.txt  ctl.c  ctl_example.c  ctl_statistics_example.c  custom_ctl.c
examples/cuda_shared_memory/: CMakeLists.txt  cuda_shared_memory.c
examples/custom_file_provider/: CMakeLists.txt  custom_file_provider.c
examples/custom_provider/: file_provider.c
examples/dram_and_fsdax/: CMakeLists.txt  dram_and_fsdax.c
examples/fetch_content/: CMakeLists.txt  fetch_umf.cmake  find_umf.cmake
examples/gpu_shared_memory/: CMakeLists.txt
examples/ipc_ipcapi/: CMakeLists.txt  ipc_ipcapi_anon_fd.bat  ipc_ipcapi_anon_fd.sh  ipc_ipcapi_consumer.c  ipc_ipcapi_producer.c  ipc_ipcapi_shm.sh
examples/ipc_level_zero/: CMakeLists.txt  ipc_level_zero.c
examples/level_zero_shared_memory/: CMakeLists.txt  level_zero_shared_memory.c
examples/memspace/: memspace_hmat.c  memspace_numa.c
examples/memspace_hmat/: CMakeLists.txt  memspace_hmat.c
examples/memspace_numa/: CMakeLists.txt  memspace_numa.c
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cpp_helpers.hpp  ipc.c  ipc_cache.c  ipc_cache.h  ipc_internal.h  libumf.c  libumf.def  libumf.def.in  libumf.h  libumf.map  libumf.map.in  libumf.rc.in  libumf_linux.c  libumf_no_os_provider.def  libumf_windows.c  memory_pool.c  memory_pool_default.c  memory_pool_internal.h  memory_pool_tracking.c  memory_properties.c  memory_properties_internal.h  memory_props.c  memory_props_internal.h  memory_provider.c  memory_provider_get_last_failed.c  memory_provider_internal.h  memory_resource.cpp  memory_target.c  memory_target.h  memory_target_ops.h  mempolicy.c  mempolicy_internal.h  memspace.c  memspace_internal.h  memtarget.c  memtarget.h  (+5 more)
src/base_alloc/: CMakeLists.txt  base_alloc.c  base_alloc.h  base_alloc_global.c  base_alloc_global.h  base_alloc_internal.h  base_alloc_linear.c  base_alloc_linear.h  base_alloc_linux.c  base_alloc_windows.c
src/coarse/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coarse.c  coarse.h
src/common/: common.h  umf_helpers.hpp
src/critnib/: critnib.c  critnib.h
src/ctl/: alloc.c  alloc.h  ctl.c  ctl.h  ctl_debug.c  ctl_debug.h  ctl_defaults.c  ctl_defaults.h  ctl_internal.h  os.h  queue.h
src/memory_targets/: memory_target_numa.c  memory_target_numa.h
src/memspaces/: memspace_highest_bandwidth.c  memspace_highest_capacity.c  memspace_host_all.c  memspace_host_all_internal.h  memspace_lowest_latency.c  memspace_numa.c  memspace_numa.h
src/memtargets/: memtarget_numa.c  memtarget_numa.h
src/pool/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libdisjoint_pool.def  libdisjoint_pool.map  libjemalloc_pool.def  libjemalloc_pool.map  libscalable_pool.def  libscalable_pool.map  pool_disjoint.c  pool_disjoint.cpp  pool_disjoint_ctl.h  pool_disjoint_internal.h  pool_jemalloc.c  pool_null.c  pool_proxy.c  pool_scalable.c  pool_scalable_internal.h  pool_trace.c
src/provider/: provider_coarse.c  provider_coarse_deprecated.c  provider_ctl_stats_impl.h  provider_ctl_stats_type.h  provider_cuda.c  provider_cuda_internal.h  provider_deprecated.c  provider_deprecated.h  provider_devdax_memory.c  provider_devdax_memory_deprecated.c  provider_devdax_memory_internal.h  provider_file_memory.c  provider_file_memory_deprecated.c  provider_file_memory_internal.h  provider_fixed.c  provider_fixed_memory.c  provider_level_zero.c  provider_level_zero_internal.h  provider_null.c  provider_os_memory.c  provider_os_memory_internal.h  provider_os_memory_linux.c  provider_os_memory_macosx.c  provider_os_memory_posix.c  provider_os_memory_windows.c  provider_trace.c  provider_tracking.c  provider_tracking.h  provider_tracking_linux.c  provider_tracking_windows.c  provider_tracking_windows.cpp
src/proxy_lib/: CMakeLists.txt  proxy_lib.c  proxy_lib.def  proxy_lib.h  proxy_lib.map  proxy_lib.rc.in  proxy_lib_linux.c  proxy_lib_windows.c
src/ravl/: ravl.c  ravl.h
src/uthash/: uthash.h  (+1 more)
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  base.cpp  cmake_install.cmake  coarse_lib.cpp  disjointCoarseMallocPool.cpp  disjointFixedMallocPool.cpp  disjoint_pool.cpp  disjoint_pool_file_prov.cpp  ipcAPI.cpp  ipcFixtures.hpp  ipc_devdax_prov.sh  ipc_devdax_prov_consumer.c  ipc_devdax_prov_producer.c  ipc_file_prov.sh  ipc_file_prov_consumer.c  ipc_file_prov_fsdax.sh  ipc_file_prov_producer.c  ipc_negative.cpp  ipc_os_prov.sh  ipc_os_prov_anon_fd.sh  ipc_os_prov_consumer.c  ipc_os_prov_producer.c  ipc_os_prov_proxy.c  ipc_os_prov_proxy.sh  ipc_os_prov_shm.sh  malloc_compliance_tests.cpp  malloc_compliance_tests.hpp  memoryPool.hpp  memoryPoolAPI.cpp  memoryProvider.hpp  memoryProviderAPI.cpp  memory_pool_internal.cpp  memspace_numa.cpp  poolFixtures.hpp  provider_coarse.cpp  provider_devdax_memory.cpp  provider_devdax_memory_ipc.cpp  provider_devdax_memory_not_impl.cpp  (+29 more)
(+832 files in other folders)
